2004-01-18  Martin Blom  <martin@blom.org>

	* Device/audioctrl.c (_AHI_AllocAudioA): Changed 'case NULL' to
	'case 0'.

2004-01-17  Martin Blom  <martin@blom.org>

	* The top Makefile called 'make' directly and didn't use
	$(MAKE). Fixed.

2003-12-22  Martin Blom  <martin@blom.org>

	* Released aros.audio 5.0.

	* Added an AROS driver based on oss.library.

2003-11-28  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.15.

	* Clear DMA buffers when they are allocated, in case they
	are accidentally played before filled (GREX problem??)

	* emu10kx.audio: Detect GREX at loading time, not on every
	interrupt.

2003-11-24  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.14.

	* emu10kx.audio: Added GREX support (apparently, it has no bus
	snooping)

2003-11-23  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.11, 5.12 and 5.13.

	* emu10kx.audio: Resynced with the latest Linux drivers in order
	to make it work on Audigy cards.

2003-10-31  Martin Blom  <martin@blom.org>

 	* Released emu10kx.audio 5.10.

	* emu10kx.audio: Don't show a requester if no sound card can be
	found. [Nicolas Sallin]
	
2003-10-16  Martin Blom  <martin@blom.org>

	* Released paula.audio 4.31.

	* paula.audio: In MorphOS, audio.device is no longer used as a
	lock for the audio hardware.  Instead, an internal flag is used

2003-09-30  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.46.

	* Obviously, I left a KPrintF in the code ...

	* Released ahi.device 5.45.

	* ahi.device: Test: Don't increase volume of playing requests
	untill all outstanding requests are finished. Should fix that
	annoying volume fluctuations?

2003-09-29  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.44.

	* ahi.device: Fixed a memory trashing bug introduced with the
	dynamic volume update (ahi.device tried to play a sound on channel
	65535.) [Kev Harrison and Michael Malyshev]

	* Released void.audio 5.7.

	* Released filesave.audio 5.4.
