@@ -27,7 +27,6 @@
 	.ENDM
 
 	.MACRO	FORM_START name
-CHUNKCNT	.ASSIGNA 0
 	.ascii	"FORM"
 	LONG	FORMEND-FORMSTART
 FORMSTART:
@@ -41,30 +40,29 @@ FORMEND:
 
 	.MACRO	CHUNK_START name
 	.ascii	"\name"
-	LONG	CHUNKEND\&CHUNKCNT-CHUNKSTART\&CHUNKCNT
-CHUNKSTART\&CHUNKCNT:
+	LONG	101f-100f
+100:
 	.ENDM
 
 	.MACRO	CHUNK_END
-CHUNKEND\&CHUNKCNT:
-CHUNKCNT	.ASSIGNA \&CHUNKCNT+1
+101:
 	.balign	2,0
 	.ENDM
 
-AHI_TagBase	.EQU	2147483648
-AHI_TagBaseR	.EQU	AHI_TagBase+32768
+.SET AHI_TagBase,     2147483648
+.SET AHI_TagBaseR,    AHI_TagBase+32768
 
-AHIDB_AudioID	.EQU	AHI_TagBase+100
-AHIDB_Volume	.EQU	AHI_TagBase+103
-AHIDB_Panning	.EQU	AHI_TagBase+104
-AHIDB_Stereo	.EQU	AHI_TagBase+105
-AHIDB_HiFi	.EQU	AHI_TagBase+106
-AHIDB_MultTable	.EQU	AHI_TagBase+108
-AHIDB_Name	.EQU	AHI_TagBaseR+109
+.SET AHIDB_AudioID,   AHI_TagBase+100
+.SET AHIDB_Volume,    AHI_TagBase+103
+.SET AHIDB_Panning,   AHI_TagBase+104
+.SET AHIDB_Stereo,    AHI_TagBase+105
+.SET AHIDB_HiFi,      AHI_TagBase+106
+.SET AHIDB_MultTable, AHI_TagBase+108
+.SET AHIDB_Name,      AHI_TagBaseR+109
 
-AHIDB_UserBase	.EQU	AHI_TagBase+500
+.SET AHIDB_UserBase,  AHI_TagBase+500
 
-TAG_DONE	.EQU	0
+.SET TAG_DONE, 	      0
 	
-TRUE		.EQU	1
-FALSE		.EQU	0
+.SET TRUE, 	      1
+.SET FALSE, 	      0
